Fixes tooltip flicker

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ select {
   content: "\25BC";
   position: absolute;
   text-align: center;
+  pointer-events: none;
 }
 
 /* Style northward tooltips specifically */
